log
Thu 16 May 2024 08:17:25 PM UTC: 
 sudoku.c | 19 +++++++++++++------
 1 file changed, 13 insertions(+), 6 deletions(-)
 tests:  0|5
total_score: 0/70
8a4750b
Thu 16 May 2024 08:25:56 PM UTC: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|5
total_score: 0/70
889122b
Thu 16 May 2024 08:30:21 PM UTC: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
6f9bbc3
Mon 20 May 2024 01:20:54 AM UTC: 
 sudoku.c | 9 +--------
 1 file changed, 1 insertion(+), 8 deletions(-)
 tests:  0|5
total_score: 0/70
777d91e
Mon 20 May 2024 01:23:04 AM UTC: 
 sudoku.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  0|5
total_score: 0/70
f8f858c
Mon 20 May 2024 01:25:40 AM UTC: 
 sudoku.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
b9b6c22
Mon 20 May 2024 01:29:41 AM UTC: 
 sudoku.c | 37 ++++++++++++++++++++++++++++++-------
 1 file changed, 30 insertions(+), 7 deletions(-)
 tests:  5|3
total_score: 35/70
9689d9e
Mon 20 May 2024 01:31:53 AM UTC: 
 sudoku.c | 30 ++++++++----------------------
 1 file changed, 8 insertions(+), 22 deletions(-)
 tests:  6|2
total_score: 45/70
c1dfd00
Mon 20 May 2024 01:34:43 AM UTC: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  0|0
a5e8040
Mon 20 May 2024 01:35:09 AM UTC: 
 sudoku.c | 17 +----------------
 1 file changed, 1 insertion(+), 16 deletions(-)
 tests:  6|2
total_score: 45/70
a57e4ae
Mon 20 May 2024 01:40:39 AM UTC: 
 sudoku.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:100:13: error: passing argument 1 of ‘push’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  100 |        push(&stack, initial);
      |             ^~~~~~
      |             |
      |             Stack ** {aka List **}
In file included from test.c:4:
list.h:33:18: note: expected ‘Stack *’ {aka ‘List *’} but argument is of type ‘Stack **’ {aka ‘List **’}
   33 | void push(Stack* s, void* data);
      |           ~~~~~~~^
In file included from test.c:5:
sudoku.c:102:16: error: implicit declaration of function ‘isStackEmpty’ [-Werror=implicit-function-declaration]
  102 |        while (!isStackEmpty(stack)) {
      |                ^~~~~~~~~~~~
sudoku.c:103:32: error: passing argument 1 of ‘pop’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  103 |            Node* current = pop(&stack);
      |                                ^~~~~~
      |                                |
      |                                Stack ** {aka List **}
In file included from test.c:4:
list.h:31:17: note: expected ‘Stack *’ {aka ‘List *’} but argument is of type ‘Stack **’ {aka ‘List **’}
   31 | void pop(Stack* s);
      |          ~~~~~~~^
In file included from test.c:5:
sudoku.c:103:28: error: void value not ignored as it ought to be
  103 |            Node* current = pop(&stack);
      |                            ^~~
sudoku.c:111:21: error: passing argument 1 of ‘push’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  111 |                push(&stack, adj);
      |                     ^~~~~~
      |                     |
      |                     Stack ** {aka List **}
In file included from test.c:4:
list.h:33:18: note: expected ‘Stack *’ {aka ‘List *’} but argument is of type ‘Stack **’ {aka ‘List **’}
   33 | void push(Stack* s, void* data);
      |           ~~~~~~~^
In file included from test.c:5:
sudoku.c:114:12: error: implicit declaration of function ‘freeList’; did you mean ‘createList’? [-Werror=implicit-function-declaration]
  114 |            freeList(adj_nodes);
      |            ^~~~~~~~
      |            createList
cc1: all warnings being treated as errors
Compilation failed
6438775
